--- a/lesson_1_3.ipynb
+++ b/lesson_1_3.ipynb
@@ -43,18 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x =[random.randint(10,100) for i in range(5)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -62,11 +51,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "five Random numbers between 10, 100 [96, 23, 46, 46, 41]\n"
+     "text": "five Random numbers between 10, 100 [36, 55, 85, 76, 28]\n"
     }
    ],
    "source": [
-    "print(f\"five Random numbers between 10, 100 {x}\")"
+    "print(f\"five Random numbers between 10, 100 {[random.randint(10,100) for i in range(5)]}\")"
    ]
   },
   {
