fixed out put appearance

--- a/lesson_1_3.ipynb
+++ b/lesson_1_3.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "print(f\"five Random numbers between 10, 100 {[random.randint(10,100) for i in range(5)]}\")"
+    "print(f\"five Random numbers between 10, 100 : {[random.randint(10,100) for i in range(5)]}\")"
    ]
   },
   {
