--- a/lesson_1_3.ipynb
+++ b/lesson_1_3.ipynb
@@ -34,16 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -51,11 +42,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "five Random numbers between 10, 100 [36, 55, 85, 76, 28]\n"
+     "text": "Five Random Numbers Between 10, 100:> [45, 26, 94, 54, 70]\n"
     }
    ],
    "source": [
-    "print(f\"five Random numbers between 10, 100 : {[random.randint(10,100) for i in range(5)]}\")"
+    "import random\n",
+    "print(f\"Five Random Numbers Between 10, 100:> {[random.randint(10,100) for i in range(5)]}\")"
    ]
   },
   {
